discord-frontend/hartex-discord-entitycache-test/tests/ui/fail/does_not_exist_or_older_version.stderr
error: type `twilight_model::DoesNotExistOrOlderVersion` cannot be found
  --> tests/ui/fail/does_not_exist_or_older_version.rs:25:17
   |
25 | #[entity(from = "twilight_model::DoesNotExistOrOlderVersion", id = [], include = [], extra = [])]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the type metadata generated was for twilight-model version 0.15.4
   = help: consider regenerating the metadata for a newer version if the type is recently added
